# kite-v2

./: .dockerignore  .gitignore  404.html  CLAUDE.md  CMakeLists.txt  Dockerfile  GOAL.md  environment.yml  makefile  mkdocs.yml  pyproject.toml
Src/: Generic.hpp  custom.cpp
about/: index.html
api/: index.html
background/: index.html
docs/: installation.md
documentation/: index.html
examples/: README.md  altermagnet_arpes.py  arpes_bilayer.py  arpes_cubic.py  arpes_tmd.py  band_structure_graphene.py  cond_sum.py  custom_haldane.py  dccond_phosphorene.py  dos_checkerboard_lattice.py  dos_cube.py  dos_cubic_lattice_twisted_bc.py  dos_dccond_haldane.py  dos_dccond_square_lattice.py  dos_fu_kane_mele_model.py  dos_graphene.py  dos_square_lattice.py  dos_square_lattice_disorder.py  dos_square_lattice_twisted_bc.py  dos_t_symmetric_cubic_weyl_sm.py  dos_vacancies.py  haldane_orbital_magnetization.py  haldane_single.py  hbn_optcond2_vacancies.py  kane_mele_spin_hall.py  kane_mele_spin_hall_disorder.py  kane_mele_spin_hall_process.py  kite.mplstyle  kite_style.py  lattice_visualization_demo.py  ldos_graphene.py  oam_quadrupole_precession.py  oam_quadrupole_precession_process.py  optcond_t_symmetric_cubic_weyl_sm.py  piflux_ldos_map.py  process_altermagnet_arpes.py  process_cond.py  process_conductivities.py  process_haldane_orbital_magnetization.py  process_piflux_ldos.py  (+11 more)
faq/: index.html
installation/: index.html
interfaces/: custom.py  kite.py
maintenance/: 2026-07-22-custom-vertex-velocity-fixes.md  installability-plan.md  native-lattice-viz-plan.md
(+135 files in other folders)
